Update production API URL

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -2,4 +2,4 @@
 
 # Backend API URL - Production
 # Replace this with your actual Render.com backend URL after deployment
-VITE_API_URL=https://your-backend-app.onrender.com/api
+VITE_API_URL=https://bjj-tracker-api.onrender.com
